--- a/index.html
+++ b/index.html
@@ -3,5 +3,13 @@
         <h1>
             This is a simple dapp</h1>
             <p>Here we are going to set up some mood</p>
+            <label for="mood">Input</label>
+            <input type="text" id="mood"/>
+            <div>
+                <button onclick="getMood()">Get Mood</button>
+            </div>
+            <div>
+                <button onclick="setMood()">Set Mood</button>
+            </div>
     </body>
 </html>
